[package]
name = "remotemedia-webrtc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "WebRTC transport for RemoteMedia pipelines with multi-peer mesh networking"
license.workspace = true
repository.workspace = true

[lib]
name = "remotemedia_webrtc"
crate-type = ["rlib"]

[[bin]]
name = "webrtc_server"
path = "src/bin/webrtc_server.rs"

[dependencies]
# Core runtime (with default features: multiprocess, silero-vad, docker)
remotemedia-runtime-core = { path = "../../runtime-core", default-features = true }

# WebRTC peer connections, ICE, DTLS, SRTP
webrtc = "0.14.0"

# WebSocket signaling client
tokio-tungstenite = "0.21"

# Audio codec - pure Rust implementation via unsafe-libopus (always enabled for WebRTC)
opus = { git = "https://github.com/DCNick3/opus-rs.git", branch = "unsafe-libopus", default-features = false, features = ["unsafe-libopus-backend"] }

# Video codecs (optional until Phase 3 - requires native libs)
media-codec-vpx = { version = "0.5", optional = true }
openh264 = { version = "0.5", optional = true }

# UUID generation for session/peer IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Serialization (JSON-RPC 2.0)
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"

# Async trait support
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# gRPC signaling (optional)
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# Server utilities
ctrlc = "3.4"
num_cpus = "1.16"
clap = { version = "4.5", features = ["derive", "env"] }

# Docker execution
bollard = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[build-dependencies]
tonic-prost-build = { workspace = true }

[[bench]]
name = "webrtc_benchmarks"
harness = false

[features]
default = []
codecs = ["dep:media-codec-vpx"]
h264 = ["dep:openh264"]
grpc-signaling = [
    "dep:tonic",
    "dep:tonic-prost",
    "dep:prost",
    "dep:tokio-stream",
    "dep:tower",
    "dep:tower-http",
]
full = ["codecs", "h264", "grpc-signaling"]
