[package]
name = "remotemedia-ingest-rtmp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "RTMP/RTMPS ingestion adapter for RemoteMedia SDK"
license.workspace = true
repository.workspace = true

[lib]
name = "remotemedia_ingest_rtmp"
crate-type = ["rlib"]

[dependencies]
# Core runtime for traits
remotemedia-core = { path = "../../core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# URL parsing
url = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Use ac-ffmpeg (same as runtime-core) for FFmpeg bindings
ac-ffmpeg = "0.19"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
